# image-to-ascii

./: Cargo.toml
src/: character_set.rs  image_parser.rs  main.rs  resize.rs  video_parser.rs
